# hypermodern-python

./: .flake8  .pre-commit-config.yaml  README.adoc  README.md  noxfile.py  pyproject.toml
documentation/: Lint.adoc  Pre-commit-hook.adoc  README.adoc  Setup.adoc  Testing.adoc  Typing.adoc
src/hypermodern_python/: console.py  wikipedia.py
tests/: conftest.py
tests/hypermodern_python/: test_console.py  test_wikipedia.py
